@@ -3,9 +3,11 @@ Changes from 0.12.1
    [ Language Changes ]
    * `let` has been removed. Python's scoping rules do not make a proper
      implementation of it possible. Use `setv` instead.
+   * `lambda` has been removed, but `fn` now does exactly what `lambda` did
    * Added bytestring literals, which create `bytes` objects under Python 3
      and `str` objects under Python 2
    * Commas and underscores are allowed in numeric literals
+   * with-decorator: Allow a `setv` form as the form to be decorated
    * xor: If exactly one argument is true, return it
 
    [ Bug Fixes ]
